Fixed distorted Edio image on mobile

--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -364,7 +364,7 @@
 
     .large-image-container {
         .o-rhythm__row {
-            max-height: 240px;
+            max-height: 244px;
             @media (min-width: 400px) {
                 max-height: 319px;
             }
